[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Props/rockbox.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Props/FallingTrap.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21, 20 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19, 1.75 )

[node name="FallingTrap" type="Node2D"]
script = ExtResource( 2 )
ActionableItemPath = NodePath("")
move_time = 1

[node name="Static" type="KinematicBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="Static"]
scale = Vector2( 0.71875, 0.71875 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Static"]
position = Vector2( 0, -1 )
shape = SubResource( 2 )

[node name="FreeArea" type="Area2D" parent="Static"]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Static/FreeArea"]
position = Vector2( 0, 22 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="Static/FreeArea"]
one_shot = true

[node name="MoveTween" type="Tween" parent="."]
playback_process_mode = 0

[connection signal="body_entered" from="Static/FreeArea" to="." method="_on_FreeArea_body_entered"]
[connection signal="tween_all_completed" from="MoveTween" to="." method="_on_MoveTween_tween_all_completed"]
